Style(SliderTwo.tsx-ID 1): fix overflow when article is hovered
Check: z-index wasn't working as expected until ->  https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Positioning/Understanding_z_index/The_stacking_context

--- a/frontend/src/component/tree/molecule/article/two/style.css
+++ b/frontend/src/component/tree/molecule/article/two/style.css
@@ -15,6 +15,7 @@
 	vertical-align: top;
 	padding-left: 0.3rem;
 	padding-right: 0.3rem;
+	height:max-content;
 }
 
 @media (min-width: 750px) {
@@ -141,7 +142,7 @@ height:100%;
 	display: inline-block;
 	position: relative;
 	border: 0;
-	height: var(--share-height);
+	height: max-content;
 	width: 100%;
 	/* transition: all 200ms ease-in;
 	transform: scale(1);
