--- a/frontend/src/component/tree/molecule/video/style.css
+++ b/frontend/src/component/tree/molecule/video/style.css
@@ -1,5 +1,10 @@
+@import'../../../common/css/variable.css';
 #video-player,
 #video-player div {
 	width: 100% !important;
 	height: 100% !important;
+}
+
+#video-player iframe {
+	border-radius: var(--border-radius);
 }
