--- a/frontend/src/component/tree/organism/groupArticle/one/style.css
+++ b/frontend/src/component/tree/organism/groupArticle/one/style.css
@@ -1,6 +1,6 @@
-/* .group_article_one_sub_main {
-	display:flex;
-} */
+.group_article_one_sub_main {
+	position:relative;
+}
 
 .group_article_one_sub_main_articles_wrapper .article_two:hover:first-child {
 	transform-origin: bottom left;
