--- a/frontend/src/component/tree/template/arcturus/style.css
+++ b/frontend/src/component/tree/template/arcturus/style.css
@@ -2,7 +2,6 @@
 #arcturus{
 	padding-left: var(--main-space);
 	padding-right:var(--main-space);
-	overflow:hidden;
 }
 
 
